final version with images added

--- a/StreamlitUI/rag_ollama_chatbot.ipynb
+++ b/StreamlitUI/rag_ollama_chatbot.ipynb
@@ -2,13 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5e26c3c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "from langchain_community.document_loaders import PyPDFLoader\n",
     "from langchain_community.document_loaders import TextLoader\n",
     "from langchain_community.document_loaders import DirectoryLoader\n",
     "\n",
@@ -22,21 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8a0a52c9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\amaan\\AppData\\Local\\Temp\\ipykernel_22660\\730556291.py:8: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
-      "  embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-mpnet-base-v2\")\n",
-      "d:\\Projects\\Lattice interview 2\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.embeddings import HuggingFaceEmbeddings\n",
@@ -44,15 +31,13 @@
     "\n",
     "splitter = RecursiveCharacterTextSplitter(chunk_size=500, chunk_overlap=50)\n",
     "chunks = splitter.split_documents(docs)\n",
-    "\n",
     "embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-mpnet-base-v2\")\n",
-    "\n",
-    "db = FAISS.from_documents(chunks, embeddings)\n"
+    "db = FAISS.from_documents(chunks, embeddings) #Qdrant is a better option for production use\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f3cfaef9",
    "metadata": {},
    "outputs": [
@@ -60,18 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Daily Site Report - 2025-06-22\n",
-      "\n",
-      "No work done, Bad weather holiday\n",
-      "\n",
-      "Daily Site Report - 2025-06-22\n",
-      "\n",
-      "The following issues were observed today:\n",
-      "\n",
-      "1. Employee ID: 524562 raised a Safety Notice (Amber) regarding dim lights near the saw blade. This issue may potentially lead to accidents, and it is recommended that the lights be replaced or brightened for better visibility.\n",
-      "\n",
-      "2. Employee ID: 524562 reported that additional manpower is required for removing windows. This task may be delayed if not addressed promptly.\n",
-      "\n",
+      "[Document(id='99364655-ee14-4320-9208-2526f3385292', metadata={'source': 'D:\\\\Projects\\\\Lattice interview 2\\\\Summarise Report\\\\2025-06-19_ground_site_report.txt'}, page_content=\"Daily Site Report - 2025-06-19\\n\\nToday's report highlights the following issues and tasks:\\n\\n1. Safety Notice (Green) - Good Observation** - Employee ID 524572 reported good, clear exclusion zones and access throughout the site, contributing to a safe working environment.\\n\\n2. Progress Photo** - Employee ID 524575 took progress photos of the ongoing RC walls construction, showing steady advancement in the structural phase.\"), Document(id='ecdef388-78fa-45e4-a2af-8c772f7f9a93', metadata={'source': 'D:\\\\Projects\\\\Lattice interview 2\\\\Summarise Report\\\\2025-06-20_ground_site_report.txt'}, page_content='Daily Site Report - 2025-06-22\\n\\nNo work done, Bad weather holiday'), Document(id='24c5678a-7357-471d-b173-f1a4c813b15d', metadata={'source': 'D:\\\\Projects\\\\Lattice interview 2\\\\Summarise Report\\\\2025-06-21_ground_site_report.txt'}, page_content=\"Daily Site Report - 2025-06-20\\n\\nToday's report highlights the following issues and tasks:\"), Document(id='e9450ef3-634b-41b1-b60f-b0f573f19f0c', metadata={'source': 'D:\\\\Projects\\\\Lattice interview 2\\\\Summarise Report\\\\2025-06-22_ground_site_report.txt'}, page_content='Daily Site Report - 2025-06-22\\n\\nThe following issues were observed today:\\n\\n1. Employee ID: 524562 raised a Safety Notice (Amber) regarding dim lights near the saw blade. This issue may potentially lead to accidents, and it is recommended that the lights be replaced or brightened for better visibility.\\n\\n2. Employee ID: 524562 reported that additional manpower is required for removing windows. This task may be delayed if not addressed promptly.')]\n",
       "Daily Site Report - 2025-06-19\n",
       "\n",
       "Today's report highlights the following issues and tasks:\n",
@@ -80,25 +54,38 @@
       "\n",
       "2. Progress Photo** - Employee ID 524575 took progress photos of the ongoing RC walls construction, showing steady advancement in the structural phase.\n",
       "\n",
-      "3. Quality Defect (Material Handling)** - Employee ID 524578 identified that some Tyvec insulation material was not properly stored, potentially exposing it to damage. The materials team has been advised to ensure proper protection of finishes.\n",
+      "Daily Site Report - 2025-06-22\n",
       "\n",
-      "The report has been prepared for your review and further action as needed.\n"
+      "No work done, Bad weather holiday\n",
+      "\n",
+      "Daily Site Report - 2025-06-20\n",
+      "\n",
+      "Today's report highlights the following issues and tasks:\n",
+      "\n",
+      "Daily Site Report - 2025-06-22\n",
+      "\n",
+      "The following issues were observed today:\n",
+      "\n",
+      "1. Employee ID: 524562 raised a Safety Notice (Amber) regarding dim lights near the saw blade. This issue may potentially lead to accidents, and it is recommended that the lights be replaced or brightened for better visibility.\n",
+      "\n",
+      "2. Employee ID: 524562 reported that additional manpower is required for removing windows. This task may be delayed if not addressed promptly.\n"
      ]
     }
    ],
    "source": [
-    "query = \"Any day where work was not done on the project? If yes, then why?\"\n",
-    "relevant_docs = db.similarity_search(query)\n",
     "\n",
+    "query = \"was there any images of the site taken\"\n",
+    "relevant_docs = db.similarity_search(query)\n",
+    "print(relevant_docs)\n",
     "context = \"\\n\\n\".join([doc.page_content for doc in relevant_docs])\n",
-    "prompt = f\"\"\"You are going to Answer the question based on the context given below, be consize and try direct and correct answers only:\\n\\n{context}\\n\\nQuestion: {query}<|im_end|>\n",
+    "prompt = f\"\"\"You are going to Answer the question based on the context given below, be consize and try direct and correct answers only:\\n\\n \\n{context}\\n\\nQuestion: {query}<|im_end|>\n",
     "<|im_start|> assistant\"\"\"\n",
     "print(context)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "2c0f02d4",
    "metadata": {},
    "outputs": [
@@ -106,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ": Yes, according to the Daily Site Report for 2025-06-22, no work was done due to bad weather.\n"
+      ": Yes, a progress photo was taken on the 19th of June by Employee ID 524575.\n"
      ]
     }
    ],
